--- a/app/Resources/views/zadanie/show.html.twig
+++ b/app/Resources/views/zadanie/show.html.twig
@@ -49,13 +49,13 @@
             {% endif %}
             {% if zadanie.Executioner %}
                 <tr>
-                    <th>Executioner</th>
+                    <th>Подизпълнител</th>
                     <td>{{ zadanie.executioner }}</td>
                 </tr>
                 {%if zadanie.designerAccepted  %}
                     <tr>
                         <th>Подизпълнител приел на:</th>
-                        <td>{{ zadanie.dateDesigner }}</td>
+                        <td>{{ zadanie.dateDesigner|date("d-m-Y H:i:s") }}</td>
                     </tr>
                 {% endif %}
             {% endif %}
@@ -80,7 +80,7 @@
             </tbody>
         </table>
         {% if app.user.type == "Boss" or app.user.type == "LittleBoss"%}
-            <div class="row">
+		    <div class="row" style="background: #dcf0d9;">
                 <form method="post" style="margin-top: 10px; margin-left: 0px; margin-right: 0px;">
                     <div class="col-md-2">
                         <input type="submit" id="approve" name="approve" value="Одобрявам"><div class="approve_icon"></div>
@@ -88,13 +88,16 @@
                     <div class="col-md-2">
                         <input type="submit" id="reject" name="reject" value="Отхвърлям"><div class="reject_icon"></div>
                     </div>
+                    <div class="col-md-2">
+                        <input type="submit" id="hold" name="hold" value="На изчакване"><div class="hold_icon"></div>
+                    </div>
                     <div class="col-md-3">
                         <input type="submit" id="archive" name="archive" value="Архивирай"><div class="archive_icon"></div>
                     </div>
                 </form>
             </div>
         {% endif %}
-        <div class="row">
+        <div class="row" style="background: #dde5ee;">
             <div class="query_buttons">
                 <div class="col-md-4">
                     <input id="button_edit" value="Обратно към заявките" onclick="location.href='{{ path('zadanie_index') }}'"/><div class="back_icon"></div>
@@ -105,7 +108,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row" style="background: #f0d9d9;">
             <div class="query_buttons">
                 {{ form_start(delete_form) }}
                 <div class="col-md-2">
