--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -24,16 +24,27 @@ body {
 .container {
     width: 100%;
 }
+#header{
+	background: #3f4146;
+}
+.logo{
+	width: 180px;
+}
+textarea {
+  height: 180px;
+}
 table{
-    border: 1px solid #a5b2cb;
-    border-radius: 5px;
+    border: 0 solid #a5b2cb;
+    border-radius: 0;
     color: #fff;
+    width: 100%;
 }
 table#index{
-    border: 1px solid #a5b2cb;
-    border-radius: 5px;
+    border: 0 solid #a5b2cb;
+    border-radius: 0;
     color: #fff;
-    margin-bottom: 100px;
+	margin-bottom: 100px;
+    width: 100%;
 }
 thead{
     background-color: #c2d0ec;
@@ -42,9 +53,14 @@ td, th, tr{
     border: 1px solid #a5b2cb;
     padding: 15px;
 }
+#index td{
+    border-bottom: 3px solid #a5b2cb;	
+}
+#index th{
+	text-shadow: rgba(0,0,0,0.8) 1px 1px 1px;
+}
 td#actions{
-    background: #ece9f2;
-    border: 1px solid #a5b2cb;
+	background: #ece9f2;
     padding: 0px;
 }
 ul{
@@ -63,21 +79,23 @@ h1{
     padding: 30px;
 }
 nav{
-    margin-top:30px;
-    height: 80px;
+	background:#242934;
+    margin-top:0;
+    padding-top:5px;
+	height: 40px;
 }
 nav a{
-    background-color: #18bc9c;
-    border: 2px solid #3a9b88;
-    border-radius: 6px;
+    background-color: #9a9a9a;
+    border-bottom: 2px solid #fff;
+    border-radius: 0;
     color: #e5e5e5;
     padding: 10px 10px 10px 10px;
     text-align: center;
 }
-nav a:hover, nav a:active{
+nav a:active, nav a:hover{
     background-color: #21d5b2;
-    border: 2px solid #18bc9c;
-    border-radius: 6px;
+    border-bottom: 2px solid #18bc9c;
+    border-radius: 0;
     color: #fff;
     padding: 10px 10px 10px 10px;
     text-align: center;
@@ -86,73 +104,115 @@ nav a:hover, nav a:active{
 .notSeen{
     background-color:#00d4f4;
     color: #000;
-
+}
+.notSeen.urgent{
+	background-color:#f13e3e;
+    color: #000;
+  transition: background-color 1s linear;
+  -webkit-transition: background-color 1s linear;
+  -o-transition: background-color 1s linear;
+  -moz-transition: background-color 1s linear;
+  -ms-transition: background-color 1s linear;
+  animation: notSeen 1s infinite;
+}
+@keyframes notSeen {
+  0% {
+    background-color: #f13e3e;
+  }
+    30% {
+    background-color: #f13e3e;
+  }
+  60% {
+    background-color: #00d4f4;
+  }
+  100% {
+    background-color: #00d4f4;
+  }
 }
 .seenNotAsssigned{
     background-color:#d2effb;
     color: #000;
 }
 .seenNotAsssigned.urgent{
-    background-color:#f13e3e;
+	background-color:#f13e3e;
     color: #000;
-    transition: background-color 1s linear;
-    -webkit-transition: background-color 1s linear;
-    -o-transition: background-color 1s linear;
-    -moz-transition: background-color 1s linear;
-    -ms-transition: background-color 1s linear;
-    animation: seenNotAsssigned 1s infinite;
+  transition: background-color 1s linear;
+  -webkit-transition: background-color 1s linear;
+  -o-transition: background-color 1s linear;
+  -moz-transition: background-color 1s linear;
+  -ms-transition: background-color 1s linear;
+  animation: seenNotAsssigned 1s infinite;
 }
 @keyframes seenNotAsssigned {
-    0% {
-        background-color: #f13e3e;
-    }
+  0% {
+    background-color: #f13e3e;
+  }
     30% {
-        background-color: #f13e3e;
-    }
-    60% {
-        background-color: #d2effb;
-    }
-    100% {
-        background-color: #d2effb;
-    }
+    background-color: #f13e3e;
+  }
+  60% {
+    background-color: #d2effb;
+  }
+  100% {
+    background-color: #d2effb;
+  }
 }
 .assigned{
     background-color:#ffda45;
     color: #000;
 }
 .assigned.urgent{
-    background-color:#f13e3e;
+	background-color:#f13e3e;
     color: #000;
-    transition: background-color 1s linear;
-    -webkit-transition: background-color 1s linear;
-    -o-transition: background-color 1s linear;
-    -moz-transition: background-color 1s linear;
-    -ms-transition: background-color 1s linear;
-    animation: assigned 1s infinite;
+  transition: background-color 1s linear;
+  -webkit-transition: background-color 1s linear;
+  -o-transition: background-color 1s linear;
+  -moz-transition: background-color 1s linear;
+  -ms-transition: background-color 1s linear;
+  animation: assigned 1s infinite;
 }
 @keyframes assigned {
-    0% {
-        background-color: #f13e3e;
-    }
+  0% {
+    background-color: #f13e3e;
+  }
     30% {
-        background-color: #f13e3e;
-    }
-    60% {
-        background-color: #ffda45;
-    }
-    100% {
-        background-color: #ffda45;
-    }
+    background-color: #f13e3e;
+  }
+  60% {
+    background-color: #ffda45;
+  }
+  100% {
+    background-color: #ffda45;
+  }
 }
-/*.urgent{
-     background-color:#ff1e00;
-     color: #fff;
-     text-shadow: rgba(0,0,0,0.8) 1px 1px 1px;
-}*/
 .due{
     background-color:#000000;
     color: #fff;
     text-shadow: rgba(0,0,0,0.8) 1px 1px 1px;
+}
+.due.urgent{
+	background-color:#f13e3e;
+    color: #fff;
+  transition: background-color 1s linear;
+  -webkit-transition: background-color 1s linear;
+  -o-transition: background-color 1s linear;
+  -moz-transition: background-color 1s linear;
+  -ms-transition: background-color 1s linear;
+  animation: due 1s infinite;
+}
+@keyframes due {
+  0% {
+    background-color: #f13e3e;
+  }
+    30% {
+    background-color: #f13e3e;
+  }
+  60% {
+    background-color: #000000;
+  }
+  100% {
+    background-color: #000000;
+  }
 }
 /*.gotovozaodobrenie{
     background-color:#84cc06;
@@ -163,33 +223,114 @@ nav a:hover, nav a:active{
     color: #fff;
     text-shadow: rgba(0,0,0,0.8) 1px 1px 1px;
 }
+.approved.urgent{
+	background-color:#f13e3e;
+    color: #fff;
+  transition: background-color 1s linear;
+  -webkit-transition: background-color 1s linear;
+  -o-transition: background-color 1s linear;
+  -moz-transition: background-color 1s linear;
+  -ms-transition: background-color 1s linear;
+  animation: approved 1s infinite;
+}
+@keyframes approved {
+  0% {
+    background-color: #f13e3e;
+  }
+    30% {
+    background-color: #f13e3e;
+  }
+  60% {
+    background-color: #007f33;
+  }
+  100% {
+    background-color: #007f33;
+  }
+}
 .delayed{
     background-color:#ff9600;
     color: #000;
 }
-.archive{
-    background-color:#909a60;
-    color:#fff;
+.delayed.urgent{
+	background-color:#f13e3e;
+    color: #000;
+  transition: background-color 1s linear;
+  -webkit-transition: background-color 1s linear;
+  -o-transition: background-color 1s linear;
+  -moz-transition: background-color 1s linear;
+  -ms-transition: background-color 1s linear;
+  animation: delayed 1s infinite;
 }
-/*.razpredelenopodizpulnitel{
+@keyframes delayed {
+  0% {
+    background-color: #f13e3e;
+  }
+    30% {
+    background-color: #f13e3e;
+  }
+  60% {
+    background-color: #ff9600;
+  }
+  100% {
+    background-color: #ff9600;
+  }
+}
+.rejected{
+    background-color:#680b00;
+    color: #fff;
+    text-shadow: rgba(0,0,0,0.8) 1px 1px 1px;
+}
+.rejected.urgent{
+	background-color:#f13e3e;
+    color: #fff;
+  transition: background-color 1s linear;
+  -webkit-transition: background-color 1s linear;
+  -o-transition: background-color 1s linear;
+  -moz-transition: background-color 1s linear;
+  -ms-transition: background-color 1s linear;
+  animation: rejected 1s infinite;
+}
+@keyframes rejected {
+  0% {
+    background-color: #f13e3e;
+  }
+    30% {
+    background-color: #f13e3e;
+  }
+  60% {
+    background-color: #680b00;
+  }
+  100% {
+    background-color: #680b00;
+  }
+}
+.archive{
+	background-color:#909a60;
+	color:#fff;
+}
+.razpredelenopodizpulnitel{
     background: -webkit-linear-gradient(left, #007f33 , #ffda45);
     background: -o-linear-gradient(right, #007f33, #ffda45);
     background: -moz-linear-gradient(right, #007f33, #ffda45);
     background: linear-gradient(to right, #007f33 , #ffda45);
-}*/
+}
 .new_query_button{
     font-size:25px;
 }
 .show_edit_buttons li{
-    text-align: center;
+	text-align: center;
     padding: 10px;
+}
+.show_edit_buttons li:hover{
+	background-color:#d2c4f0;
 }
 .show_edit_buttons li a{
     text-decoration: none;
     color: #000;
     text-shadow: rgba(0,0,0,0) 1px 1px 1px;
-    font-weight: 600;
+	font-weight: 600;
 }
+
 .content{
     width:70%;
     margin-right: auto;
@@ -201,116 +342,137 @@ nav a:hover, nav a:active{
 .show_query th{
     background-color:#9ba2b6;
     text-shadow: rgba(0,0,0,0.8) 1px 1px 1px;
-    width:20%;
+	width:20%;
 }
 .show_query td{
     background-color:#d9dff2;
     color:#252525;
-    font-weight:600;
+	font-weight:600;
 }
 .query_buttons{
-    margin-top:0;
+    padding-top: 15px;
     height:50px;
 }
 .query_buttons a{
     background-color: #18bc9c;
-    border: 2px solid #3a9b88;
-    border-radius: 6px;
+    border-bottom: 2px solid #3a9b88;
+    border-radius: 0;
     color: #e5e5e5;
     padding: 10px 10px 10px 40px;
     text-align: center;
-    width:100%;
+	width:100%;
 }
 
 input#button_delete, #reject{
     background-color: #ee5454;
-    border: 2px solid #ff1212;
-    border-radius: 6px;
-    color: #fff;
+    border-bottom: 2px solid #ff1212;
+    border-radius: 0;
+    color: #f4f4f4;
     padding: 10px 10px 10px 40px;
     text-align: center;
     width: 100%;
+	opacity:0.8;
 }
 input#archive{
     background-color: #91c939;
-    border: 2px solid #76a728;
-    border-radius: 6px;
-    color: #fff;
+    border-bottom: 2px solid #76a728;
+    border-radius: 0;
+    color: #f4f4f4;
     padding: 10px 10px 10px 40px;
     text-align: center;
-    width: 100%;
+	width: 100%;
+	opacity:0.8;
 }
 #button_edit, #button_create{
     background-color: #9caee7;
-    border: 2px solid #8195d3;
-    border-radius: 6px;
-    color: #fff;
+    border-bottom: 2px solid #8195d3;
+	border-top:0;
+	border-left:0;
+	border-right:0;
+    border-radius: 0;
+    color: #f4f4f4;
     padding: 10px 10px 10px 40px;
     text-align: center;
-    width: 100%;
-    cursor:pointer;
+	width: 100%;
+	cursor:pointer;
+	opacity:0.8;
 }
 #approve{
     background-color: #18bc9c;
-    border: 2px solid #3a9b88;
-    border-radius: 6px;
-    color: #fff;
+    border-bottom: 2px solid #3a9b88;
+    border-radius: 0;
+    color: #f4f4f4;
     padding: 10px 10px 10px 40px;
     text-align: center;
-    width: 100%;
-    cursor:pointer;
+	width: 100%;
+	cursor:pointer;
+	opacity:0.8;
 }
 #appbundle_comments_Comment{
     background-color: #9ba2b6;
-    border: 2px solid #727c98;
-    border-radius: 6px;
-    color: #fff;
+    border-bottom: 2px solid #727c98;
+    border-radius: 0;
+    color: #f4f4f4;
     padding: 10px 10px 10px 10px;
     text-align: center;
+	opacity:0.8;
 }
-
+#hold{
+    background-color: #fba02a;
+    border-bottom: 2px solid #f86f0b;
+    border-radius: 0;
+    color: #f4f4f4;
+    padding: 10px 10px 10px 40px;
+    text-align: center;
+    width: 100%;
+	opacity:0.8;
+}
+input#button_delete:hover, #reject:hover, input#archive:hover, #button_edit:hover, #button_create:hover,#approve:hover, #appbundle_comments_Comment:hover, #hold:hover{
+    color: #fff;
+	opacity:1;
+	}
 #appbundle_zadanie label{
     width:25%;
 }
 #appbundle_zadanie input, #appbundle_zadanie #appbundle_zadanie_term{
-    display: inline-block;
+	display: inline-block;
     width:70%;
 }
 #appbundle_zadanie_ergent{
-    width:10%;
+	width:10%;
 }
 #comments{
-    background-color:#9ba2b6;
+	background-color:#9ba2b6;
     margin: 10px 0px 50px 0px;
 }
 
 .text-field{
     margin: 10px 0px 10px 0px;
     background-color: #fff;
-    padding: 5px;
+	padding: 5px;
 }
 .login_register{
     width: 500px;
     margin-right: auto;
     margin-left: auto;
-    margin-top: 10%;
+	margin-top: 10%;
     background-color: #fff;
     padding: 20px;
 }
 .login_register label{
-    width:25%;
+     width:25%;
 }
 
 select{
-    background-color: #e8eaf2;
+	background-color: #e8eaf2;
     border-radius: 3px;
 }
 
 
-.delete_icon a, .approve_icon a, .reject_icon a, .archive_icon a, .back_icon a, .edit_icon a, .comment_icon a, .save_new_query_icon a, .login_icon a{
+ .delete_icon a, .approve_icon a, .reject_icon a, .archive_icon a, .back_icon a, .edit_icon a, .comment_icon a, .save_new_query_icon a, .login_icon a, .hold_icon a{
     line-height: 2.5;
     -webkit-transition: .3s ease;
-    transition: .3s ease;
+    transition: .3s ease; 		
 }
 .delete_icon:before {
     content: "\f014";
@@ -322,8 +484,8 @@ select{
     font-size: 20px;
     position: relative;
     top: -32px;
-    left: 15px;
-}
+	left: 15px;
+}	
 .approve_icon:before {
     content: "\f00c";
     font-family: FontAwesome;
@@ -334,8 +496,8 @@ select{
     font-size: 20px;
     position: relative;
     top: -32px;
-    left: 15px;
-}
+	left: 15px;
+}		
 .reject_icon:before {
     content: "\f00d";
     font-family: FontAwesome;
@@ -346,8 +508,8 @@ select{
     font-size: 20px;
     position: relative;
     top: -32px;
-    left: 15px;
-}
+	left: 15px;
+}	
 .archive_icon:before {
     content: "\f07c";
     font-family: FontAwesome;
@@ -358,7 +520,7 @@ select{
     font-size: 20px;
     position: relative;
     top: -32px;
-    left: 15px;
+	left: 15px;
 }
 .back_icon:before {
     content: "\f060";
@@ -370,8 +532,8 @@ select{
     font-size: 20px;
     position: relative;
     top: -32px;
-    left: 15px;
-}
+	left: 15px;
+}	
 .edit_icon:before {
     content: "\f0ad";
     font-family: FontAwesome;
@@ -382,7 +544,7 @@ select{
     font-size: 20px;
     position: relative;
     top: -32px;
-    left: 15px;
+	left: 15px;
 }
 .comment_icon:before {
     content: "\f0ad";
@@ -394,8 +556,8 @@ select{
     font-size: 20px;
     position: relative;
     top: -20px;
-    left: 15px;
-}
+	left: 15px;
+}	
 .save_new_query_icon:before {
     content: "\f0c7";
     font-family: FontAwesome;
@@ -406,8 +568,8 @@ select{
     font-size: 20px;
     position: relative;
     top: -32px;
-    left: 15px;
-}
+	left: 15px;
+}	
 .login_icon:before {
     content: "\f04b";
     font-family: FontAwesome;
@@ -418,15 +580,27 @@ select{
     font-size: 20px;
     position: relative;
     top: -32px;
-    left: 15px;
+	left: 15px;
 }
+.hold_icon:before {
+    content: "\f04c";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    color: #ebebeb;
+    font-size: 20px;
+    position: relative;
+    top: -32px;
+	left: 15px;
+}		
 .success p{
-    width:100%;
+	width:100%;
     text-align: center;
-    color:#3f9b39;
+	color:#3f9b39;
 }
 .error p{
-    width:100%;
+	width:100%;
     text-align: center;
-    color:#fa0f0f;
+	color:#fa0f0f;
 }
