onHold + change nav color
onHold + change nav color

--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -79,22 +79,22 @@ h1{
     padding: 30px;
 }
 nav{
-	background:#242934;
+	background:#dde5ee;
     margin-top:0;
     padding-top:5px;
 	height: 40px;
 }
 nav a{
-    background-color: #9a9a9a;
-    border-bottom: 2px solid #fff;
+    background-color: #aeb9db;
+    border-bottom: 2px solid #8195d3;
     border-radius: 0;
     color: #e5e5e5;
     padding: 10px 10px 10px 10px;
     text-align: center;
 }
 nav a:active, nav a:hover{
-    background-color: #21d5b2;
-    border-bottom: 2px solid #18bc9c;
+    background-color: #9caee7;
+    border-bottom: 2px solid #8195d3;
     border-radius: 0;
     color: #fff;
     padding: 10px 10px 10px 10px;
@@ -302,6 +302,35 @@ nav a:active, nav a:hover{
   }
   100% {
     background-color: #680b00;
+  }
+}
+.onHold{
+    background-color:#fc9e18 ;
+    color: #fff;
+    text-shadow: rgba(0,0,0,0.8) 1px 1px 1px;
+}
+.onHold.urgent{
+	background-color:#f13e3e;
+    color: #fff;
+  transition: background-color 1s linear;
+  -webkit-transition: background-color 1s linear;
+  -o-transition: background-color 1s linear;
+  -moz-transition: background-color 1s linear;
+  -ms-transition: background-color 1s linear;
+  animation: onHold 1s infinite;
+}
+@keyframes onHold {
+  0% {
+    background-color: #f13e3e;
+  }
+    30% {
+    background-color: #f13e3e;
+  }
+  60% {
+    background-color: #fc9e18 ;
+  }
+  100% {
+    background-color: #fc9e18 ;
   }
 }
 .archive{
