--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -7,6 +7,25 @@ body {
     overflow-x: hidden;
     margin: 0;
 }
+/*
+Default index page
+*/
+#wrapper { 
+	background: #FFF; 
+	margin: 5em auto; 
+	max-width: 800px; 
+	width: 95%; 
+}
+#container { 
+    padding: 2em; 
+}
+#welcome h1 span { 
+	display: block; 
+	font-size: 35px; 
+}
+/*
+Default index page
+*/		
 .container {
     margin-right: auto;
     margin-left: auto;
@@ -360,14 +379,14 @@ nav a:active, nav a:hover{
     background-color: #f13e3e;
   }
   60% {
-    background-color: #fc9e18 ;
+    background-color: #a3df00 ;
   }
   100% {
     background-color: #a3df00  ;
   }
 }
 .archive{
-	background-color:#a3df00 ;
+	background-color:#909a60;
 	color:#fff;
 }
 .razpredelenopodizpulnitel{
