Add more-less text in index and jquery, class for users(comments)
Add more-less text in index and jquery, class for users(comments)

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,6 +8,7 @@
             <link rel="stylesheet" href="{{ asset("styles/bootstrap.min.css") }}">
             <link rel="stylesheet" href="{{ asset("styles/main.css") }}">
             <link rel="stylesheet" href="{{ asset("styles/fonts/font-awesome.min.css") }}">
+            <script src="{{ asset("scripts/jquery-3.2.1.min.js") }}"></script>
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
@@ -59,6 +60,7 @@
     {% block javascripts %}
         <script src="{{ asset("scripts/bootstrap.min.js") }}"></script>
         <script src="{{ asset("scripts/main.js") }}"></script>
+
     {% endblock %}
 </div>
 </body>
