Add username in base page
Add username in base page

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -35,6 +35,7 @@
             </div>
             <div class="pull-right">
                 {% if app.user %}
+				    <a class="username">Здравейте, {{ app.user.username }}</a>
                     <a class="logout" href="{{ path('user_logout') }}">Изход</a>
                 {% endif %}
             </div>
