--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -712,3 +712,8 @@ select{
 .morecontent span {
     display: none;
 }
+.username, .username:hover{
+	background: none;
+    color: #fff;
+    border: none;
+}
