--- a/app/Resources/views/zadanie/index.html.twig
+++ b/app/Resources/views/zadanie/index.html.twig
@@ -52,26 +52,31 @@
                     <td>{% if zadanie.isOver %}Да{% else %}Не{% endif %}</td>
                     <td>{{ zadanie.status }}</td>
 					
-				    <!--
+
 					<td id="actions" style="padding:10px 10px 0 10px">
 				    {% if zadanie.isOver and app.user.type == "LittleBoss" or app.user.type == "Boss"  %}
 
-						<div> 
-					 	     <input id="button_delete" type="submit" value="Изтрий"><div class="delete_icon"></div>
-						</div>
 
 					{% elseif app.user.type == "LittleBoss" or app.user.type == "Boss"  %}
-						<div>
-							<input type="submit" id="approve" name="approve" value="Одобрявам"><div class="approve_icon"></div>
-						</div>
-						<div>
-							<input type="submit" id="archive" name="archive" value="Архивирай"><div class="archive_icon"></div>
-						</div>
+                        <form action="{{ path('zadanie_update', { 'id': zadanie.id }) }}" method="post" style="margin-top: 10px; margin-left: 0px; margin-right: 0px;">
+                            <div class="col-md-2">
+                                <input type="submit" id="approve" name="approve" value="Одобрявам"><div class="approve_icon"></div>
+                            </div>
+                            <div class="col-md-2">
+                                <input type="submit" id="reject" name="reject" value="Отхвърлям"><div class="reject_icon"></div>
+                            </div>
+                            <div class="col-md-2">
+                                <input type="submit" id="hold" name="hold" value="На изчакване"><div class="hold_icon"></div>
+                            </div>
+                            <div>
+                                <input type="submit" id="forApproval" name="forApproval" value="За одобрение"/>
+                            </div>
+                        </form>
 					{% elseif app.user.type == "Designer" %}
 					    Button for Designer
 						</td>
 					{% endif %}
-					-->
+
 					
 					<td id="actions">
                         <ul class="show_edit_buttons">
