--- a/app/Resources/views/zadanie/show.html.twig
+++ b/app/Resources/views/zadanie/show.html.twig
@@ -19,7 +19,7 @@
             </tr>
             <tr>
                 <th>Описание</th>
-                <td style="font-size:30px;">{{ zadanie.description }}</td>
+                <td class="description">{{ zadanie.description }}</td>
             </tr>
             <tr>
                 <th>Краен Срок</th>
@@ -102,8 +102,8 @@
                     <div class="col-md-3">
                         <input type="submit" id="archive" name="archive" value="Архивирай"><div class="archive_icon"></div>
                     </div>
-                    <div>
-                        <input type="submit" id="forApproval" name="forApproval" value="За одобрение"/>
+                    <div class="col-md-2">
+                        <input type="submit" id="forApproval" name="forApproval" value="За одобрение"/><div class="forApproval_icon"></div>
                     </div>
                 </form>
             </div>
