--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -53,7 +53,7 @@ textarea{
 	width: 180px;
 }
 textarea {
-  height: 180px;
+  height: 200px;
 }
 table{
     border: 0 solid #a5b2cb;
@@ -74,6 +74,20 @@ thead{
 td, th, tr{
     border: 1px solid #a5b2cb;
     padding: 15px;
+}
+.description{
+	font-size: 22px;
+    /* white-space: pre; */
+    white-space: pre-wrap;
+    white-space: pre-line;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -hp-pre-wrap;
+    /* word-wrap: break-word; */
+    /* word-wrap: break-word; */
+    word-break: break-all;
+    table-layout: fixed;
 }
 #index td{
     border-bottom: 3px solid #a5b2cb;	
@@ -481,9 +495,34 @@ input#archive{
 	cursor:pointer;
 	opacity:0.8;
 }
+#button_details{
+    background-color: #bd5cf5;
+    border-bottom: 2px solid #9d39d7;
+	border-top:0;
+	border-left:0;
+	border-right:0;
+    border-radius: 0;
+    color: #f4f4f4;
+    padding: 10px 10px 10px 40px;
+    text-align: center;
+	width: 100%;
+	cursor:pointer;
+	opacity:0.8;
+}
 #approve{
     background-color: #18bc9c;
     border-bottom: 2px solid #3a9b88;
+    border-radius: 0;
+    color: #f4f4f4;
+    padding: 10px 10px 10px 40px;
+    text-align: center;
+	width: 100%;
+	cursor:pointer;
+	opacity:0.8;
+}
+#forApproval, #working{
+	background-color: #84cc06 ;
+    border-bottom: 2px solid #72a21e;
     border-radius: 0;
     color: #f4f4f4;
     padding: 10px 10px 10px 40px;
@@ -511,7 +550,7 @@ input#archive{
     width: 100%;
 	opacity:0.8;
 }
-input#button_delete:hover, #reject:hover, input#archive:hover, #button_edit:hover, #button_create:hover,#approve:hover, #appbundle_comments_Comment:hover, #hold:hover{
+input#button_delete:hover, #reject:hover, input#archive:hover, #button_edit:hover, #button_create:hover,#approve:hover, #appbundle_comments_Comment:hover, #hold:hover, #forApproval:hover, #button_details:hover{
     color: #fff;
 	opacity:1;
 	}
@@ -555,7 +594,7 @@ select{
 }
 
 
- .delete_icon a, .approve_icon a, .reject_icon a, .archive_icon a, .back_icon a, .edit_icon a, .comment_icon a, .save_new_query_icon a, .login_icon a, .hold_icon a{
+ .delete_icon a, .approve_icon a, .reject_icon a, .archive_icon a, .back_icon a, .edit_icon a, .comment_icon a, .save_new_query_icon a, .login_icon a, .hold_icon a, .forApproval_icon a, .details_icon a, .working_icon a{
     line-height: 2.5;
     -webkit-transition: .3s ease;
     transition: .3s ease; 		
@@ -657,7 +696,7 @@ select{
 	left: 15px;
 }	
 .login_icon:before {
-    content: "\f04b";
+    content: "\f13e";
     font-family: FontAwesome;
     font-style: normal;
     font-weight: normal;
@@ -665,7 +704,7 @@ select{
     color: #ebebeb;
     font-size: 20px;
     position: relative;
-    top: -32px;
+    top: -31px;
 	left: 15px;
 }
 .hold_icon:before {
@@ -680,6 +719,42 @@ select{
     top: -32px;
 	left: 15px;
 }		
+.forApproval_icon:before{
+	content: "\f045";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    color: #ebebeb;
+    font-size: 20px;
+    position: relative;
+    top: -30px;
+	left: 15px;
+}
+.details_icon:before{
+	content: "\f05a";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    color: #ebebeb;
+    font-size: 20px;
+    position: relative;
+    top: -32px;
+	left: 15px;
+}
+.working_icon:before{
+	content: "\f04b";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    color: #ebebeb;
+    font-size: 20px;
+    position: relative;
+    top: -32px;
+	left: 15px;
+}
 .success p{
 	width:100%;
     text-align: center;
@@ -715,4 +790,21 @@ select{
 	background: none;
     color: #fff;
     border: none;
+}
+.more{
+	width: 25%;
+    /* white-space: pre; */
+    white-space: pre-wrap;
+    white-space: pre-line;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -hp-pre-wrap;
+    /* word-wrap: break-word; */
+    /* word-wrap: break-word; */
+    word-break: break-all;
+    table-layout: fixed;
+}
+.date{
+    width: 8%;
 }
