Index page comments and buttons
Index page comments and buttons

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -29,7 +29,7 @@
                     <a href="{{ path('zadanie_new') }}">Нова заявка</a>
                     {% endif %}
                 {% else %}
-                    <a href="{{ path('homepage') }}">Home</a>
+                    <a href="{{ path('homepage') }}">Начало</a>
                     <a href="{{ path('user_login') }}">Вход</a>
                 {% endif %}
             </div>
