--- a/app/Resources/views/zadanie/show.html.twig
+++ b/app/Resources/views/zadanie/show.html.twig
@@ -69,7 +69,7 @@
             {% endif %}
             <tr>
                 <th>Линк</th>
-                <td>{% if zadanie.file%}<a href="{{ zadanie.file }}">Линк към файла</a> {% else %}Няма качени файлове{% endif %}</td>
+                <td>{% if zadanie.file%}<a href="{{ zadanie.file }}" target="_blank">Линк към файла</a> {% else %}Няма качени файлове{% endif %}</td>
             </tr>
             <tr>
                 <th>Одобрена</th>
