--- a/app/Resources/views/zadanie/index.html.twig
+++ b/app/Resources/views/zadanie/index.html.twig
@@ -18,13 +18,14 @@
                 <th>От</th>
                 <th>Вид</th>
                 <th>Описание</th>
+                <th>Файл</th>
                 <th>Краен Срок</th>
                 <th>Дата</th>
                 <th>Дизайнер</th>
                 <th>Подизпълнител</th>
                 <th>Приключил</th>
                 <th>Статус</th>	
-                <th>Опции</th>
+                <th>Коментари</th>	
             </tr>
             </thead>
             <tbody>
@@ -34,6 +35,7 @@
                     <td>{{ zadanie.fromUser }}</td>
                     <td>{{ zadanie.typeTask }}</td>
                     <td class="more">{{ zadanie.description }}</td>
+					<td>{% if zadanie.file%}<a href="{{ zadanie.file }}" target="_blank">Линк към файла</a> {% else %}Няма качени файлове{% endif %}</td>
                     <td class="date">{% if zadanie.term %}{{ zadanie.term|date('d-m-Y H:i:s') }}{% endif %}</td>
                     <td class="date">{% if zadanie.date %}{{ zadanie.date|date('d-m-Y H:i:s') }}{% endif %}</td>
 					{% if app.user.type == "LittleBoss" or app.user.type == "Boss"  %}
@@ -48,14 +50,21 @@
                     <td>{{ zadanie.executioner }}</td>
                     <td>{% if zadanie.isOver %}Да{% else %}Не{% endif %}</td>
                     <td>{{ zadanie.status }}</td>
-					
+					<td rowspan = "2" style="    border-bottom: 3px solid #a5b2cb;"	>
 
-					<td id="actions" style="padding:0">
+							<div style="overflow-y: auto; width: 100%;height: 180px;margin: 0;padding: 0;">					       
+							<p class="row">От: Алекс</p>
+                           <p class="row">Дата 20.06.2017</p>
+	                       <span>Коментар: </span>dsdcjsdcbsjd hbfksjnf sjknf sjfn sjfnsjfbndbjh sbdfj bdfjhb fjsdb jshdbfn jsdndsdc jsdcbsjdhbfk sjnf sjknf sjfn sjfnsjfbndbjh sbdfj bdfjhb fjsdb jshdbfn jsf jshdbfnj ehsbfn
+					jhsnfjsfs fnis fneifneifnein  ni fi fni ienfi nfisufnisdfnids fnisd fws efwefsefsdfdsfsd</div></td>
+                </tr>
+			    <tr id="actions" class="{{ zadanie.class }}">
+				    <td colspan = "11" id="buttons" style="padding: 10px 0px 0px 0px;">
 				    {% if zadanie.isOver and app.user.type == "LittleBoss" or app.user.type == "Boss"  %}
 
 
 					{% elseif app.user.type == "LittleBoss" or app.user.type == "Boss"  %}
-                        <form action="{{ path('zadanie_update', { 'id': zadanie.id }) }}" method="post" style="margin: 10px 0px 0px 0px;">
+                        <form action="{{ path('zadanie_update', { 'id': zadanie.id }) }}" method="post">
                             <div class="col-md-2">
                                 <input type="submit" id="approve" name="approve" value="Одобрявам"><div class="approve_icon"></div>
                             </div>
@@ -65,26 +74,33 @@
                             <div class="col-md-2">
                                 <input type="submit" id="hold" name="hold" value="На изчакване"><div class="hold_icon"></div>
                             </div>
-                            <div class="col-md-2">
+                            <div class="col-md-2" >
                                 <input type="submit" id="forApproval" name="forApproval" value="За одобрение"/><div class="forApproval_icon"></div>
                             </div>
-                        </form>
+							
 					{% elseif app.user.type == "Designer" %}
+					<!--
                             <div class="col-md-2">
                                 <input type="submit" id="working" name="working" value="Работи се"/><div class="working_icon"></div>
-                            </div>						
+                            </div>	
+-->							
 					{% endif %}
-
-								<div class="col-md-2" style="margin: 10px 0px 0px 0px;">
+					
+					    </form>
+                             <div>
+								<div class="col-md-2">
 									<input id="button_details" value="Детайли" onclick="location.href='{{ path('zadanie_show', { 'id': zadanie.id }) }}'"/><div class="details_icon"></div>
 								</div>
                             {% if zadanie.isOver %}
 
-							{% elseif app.user.type != "Designer" and app.user.type != "Executioner"  %}	
+							{% elseif app.user.type != "Executioner" and app.user.type != "Manager" %}	
 								<div class="col-md-2">
 									<input id="button_edit" value="Промяна" onclick="location.href='{{ path('zadanie_edit', { 'id': zadanie.id }) }}'"/><div class="edit_icon"></div>
 								</div>
-                            {% endif %}
+                            </div>
+							{% endif %}
+					</td>
+
                 </tr>
             {% endfor %}
             </tbody>
