--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -78,25 +78,28 @@ td, th, tr{
 }
 #index td, #index th, #index tr{
     border:0;
-	padding: 10px;
+    padding: 10px 5px 10px 5px;
 }
 .description{
 	font-size: 22px;
-    /* white-space: pre; */
     white-space: pre-wrap;
     white-space: pre-line;
     white-space: -pre-wrap;
     white-space: -o-pre-wrap;
     white-space: -moz-pre-wrap;
     white-space: -hp-pre-wrap;
-    /* word-wrap: break-word; */
-    /* word-wrap: break-word; */
     word-break: break-all;
     table-layout: fixed;
 }
+
+.comments{
+	border-bottom: 6px solid #323232;
+	width: 15%;
+}
 td#buttons{
-    border-bottom: 3px solid #a5b2cb;	
+    border-bottom: 6px solid #323232;	
 	padding: 0;
+	height: 60px;
 }
 #index th{
 	text-shadow: rgba(0,0,0,0.8) 1px 1px 1px;
@@ -845,6 +848,29 @@ select{
     word-break: break-all;
     table-layout: fixed;
 }
+.type{
+	width: 11%;
+    /* white-space: pre; */
+    white-space: pre-wrap;
+    white-space: pre-line;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -hp-pre-wrap;
+    /* word-wrap: break-word; */
+    /* word-wrap: break-word; */
+    word-break: break-all;
+    table-layout: fixed;
+}
 .date{
-    width: 10%;
+   width:6%;
+}
+.department{
+	width:6%;
+}
+.user{
+   width:8%;	
+}
+.status{
+  width:8%;	
 }
