--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -91,10 +91,25 @@ td, th, tr{
     word-break: break-all;
     table-layout: fixed;
 }
-
+.overflow{
+	overflow-y: auto; 
+	width: 100%;
+	height: 180px;
+	margin: 0;
+	padding: 0;
+}
 .comments{
+	 scrollbar-face-color: #367CD2;
 	border-bottom: 6px solid #323232;
 	width: 15%;
+    white-space: pre-wrap;
+    white-space: pre-line;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -hp-pre-wrap;
+    word-break: break-all;
+    table-layout: fixed;
 }
 td#buttons{
     border-bottom: 6px solid #323232;	
